# alexkaufman.live

./: .gitmodules  DEPLOYMENT.md  README.md  alexkaufman_live.py  alexkaufmanlive.py  alexkaufmanlive_wsgi.py  pyproject.toml  schema.sql  update-site.sh
alexkaufmanlive/: __init__.py  alexkaufmanlive_wsgi.py  config.py  db.py  schema.sql  shows.py
alexkaufmanlive/content/: README.md  contact.md  epk.md  home.md
alexkaufmanlive/content/shows/: 1234.md  2024-09-19_waverly-ny.md  2024-09-25_philadelphia-pa.md  2024-09-26_finger-lakes-comedy-festival.md  2024-09-26_homer-ny.md  2024-10-04_pendelton-or.md  2024-10-26_glasgow-mt.md  2024-11-04_big-sky-mt.md  2024-11-13_bozeman-mt.md  2024-11-16_orofino-id.md  2024-11-22_missoula-mt.md  2024-11-29_bozeman.md  2025-01-08_bozeman-mt.md  2025-01-16_townsent-mt.md  2025-01-17_helena-mt.md  2025-01-18_missoula-mt.md  2025-02-19_bozeman-mt.md  2025-03-14_helena-mt.md  2025-03-15_helena-mt.md  2025-04-16_bozeman-mt.md  2025-05-21_bozeman-mt.md  2025-05-27_bismark-nd.md  2025-05-30_butte.md  2025-06-11_bozeman-mt.md  2025-06-13_holton-ks.md  2025-06-26_webster-sd.md  2025-07-11_spearfish-sd.md  2025-08-11_bozeman-mt.md  2025-08-15_brooklyn-ny.md  2025-08-19_brooklyn-ny.md  2025-08-19_manhattan-ny.md  (+59 more)
alexkaufmanlive/routes/: main.py  shows.py
alexkaufmanlive/services/: email.py  markdown.py
alexkaufmanlive/static/: style.css
alexkaufmanlive/templates/: 404.html  404.jinja2  base.html  base.jinja2  epk.jinja2  error.jinja2  home.jinja2  parts.jinja2  show.html  show.jinja2  shows.html  shows.jinja2  sitemap_template.jinja2
(+1 files in other folders)
