[project]
name = "alexkaufmanlive"
version = "0.0.0"
description = "My comedy website."
dependencies = [
    "flask>=2.3.0",
    "click>=8.0.0",
    "python-frontmatter>=1.0.0",
    "mistune>=3.0.0",
    "requests>=2.28.0",
    "onepassword-sdk>=0.1.0"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
